MAJ 09/10 ConnectionPage with logo

--- a/src/main/webapp/Connection.xhtml
+++ b/src/main/webapp/Connection.xhtml
@@ -26,6 +26,9 @@
             </p:menuButton>
         </h:form>
         <div class ="containers">
+            <div class="spaceformeConnection">
+                <p:graphicImage value="CSS/PICTURES/logo_Sym022.png"/>
+            </div>
             <h1>
                 <h:outputText value="#{I18N['connectionpage.title']}" />
             </h1>
